force-app/main/default/objects/SiteCustomSettings__c/fields/AirHBLNoPrefix__c.field-meta.xml
<CustomField>
    <fullName>AirHBLNoPrefix__c</fullName>
    <label>Air HBL No Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>