force-app/main/default/objects/SiteCustomSettings__c/fields/AsAgentForCarrier1__c.field-meta.xml
<CustomField>
    <fullName>AsAgentForCarrier1__c</fullName>
    <label>As Agent For Carrier 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>