force-app/main/default/objects/SiteCustomSettings__c/fields/AsAgentForCarrier2__c.field-meta.xml
<CustomField>
    <fullName>AsAgentForCarrier2__c</fullName>
    <label>As Agent For Carrier 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>