force-app/main/default/objects/SiteCustomSettings__c/fields/BankObjectIDPrefix__c.field-meta.xml
<CustomField>
    <fullName>BankObjectIDPrefix__c</fullName>
    <label>Bank Object ID Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>