force-app/main/default/objects/SiteCustomSettings__c/fields/BillingDefaultCurrency__c.field-meta.xml
<CustomField>
    <fullName>BillingDefaultCurrency__c</fullName>
    <label>Billing Default Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>