force-app/main/default/objects/SiteCustomSettings__c/fields/BLIssuedLocation__c.field-meta.xml
<CustomField>
    <fullName>BLIssuedLocation__c</fullName>
    <label>B/L Issued Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>