force-app/main/default/objects/SiteCustomSettings__c/fields/ClientCommunication__c.field-meta.xml
<CustomField>
    <fullName>ClientCommunication__c</fullName>
    <inlineHelpText>Must not input http://.</inlineHelpText>
    <label>Client Communication</label>
    <type>Url</type>
</CustomField>