force-app/main/default/objects/SiteCustomSettings__c/fields/CompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>CompanyAddress__c</fullName>
    <defaultValue>&quot;Address&quot;</defaultValue>
    <description>use to contain company address information</description>
    <label>Company Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>