force-app/main/default/objects/SiteCustomSettings__c/fields/CompanyAddressZIP__c.field-meta.xml
<CustomField>
    <fullName>CompanyAddressZIP__c</fullName>
    <label>Company Address (ZIP/City)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>