force-app/main/default/objects/SiteCustomSettings__c/fields/CompanyCountry__c.field-meta.xml
<CustomField>
    <fullName>CompanyCountry__c</fullName>
    <description>The country to consider as &quot;local&quot;. This is driven by HBL SHIPMENT POL-COUNTRY</description>
    <inlineHelpText>The country to consider as local. This is driven by HBL Shipment POL-Country</inlineHelpText>
    <label>Company Country</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>