force-app/main/default/objects/SiteCustomSettings__c/fields/CompanyEmail__c.field-meta.xml
<CustomField>
    <fullName>CompanyEmail__c</fullName>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>