force-app/main/default/objects/SiteCustomSettings__c/fields/CompanyFax__c.field-meta.xml
<CustomField>
    <fullName>CompanyFax__c</fullName>
    <defaultValue>&quot;Fax&quot;</defaultValue>
    <description>use to contain company fax number</description>
    <label>Company Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>