force-app/main/default/objects/SiteCustomSettings__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <defaultValue>&quot;Company Name&quot;</defaultValue>
    <description>Name in English</description>
    <inlineHelpText>Name in English</inlineHelpText>
    <label>Company Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>