force-app/main/default/objects/SiteCustomSettings__c/fields/CompanyPhone__c.field-meta.xml
<CustomField>
    <fullName>CompanyPhone__c</fullName>
    <defaultValue>&quot;Phone Number&quot;</defaultValue>
    <description>use to contain company phone number</description>
    <label>Company Phone</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>