force-app/main/default/objects/SiteCustomSettings__c/fields/CompanySignature__c.field-meta.xml
<CustomField>
    <fullName>CompanySignature__c</fullName>
    <label>Company Signature</label>
    <type>TextArea</type>
</CustomField>