force-app/main/default/objects/SiteCustomSettings__c/fields/CustomDateFormat__c.field-meta.xml
<CustomField>
    <fullName>CustomDateFormat__c</fullName>
    <defaultValue>&quot;dd/MM/yyyy&quot;</defaultValue>
    <description>A custom format for date value such as dd-MMM-yy</description>
    <inlineHelpText>A custom format for date value such as dd-MMM-yy</inlineHelpText>
    <label>Custom Date Format</label>
    <length>20</length>
    <type>Text</type>
</CustomField>