force-app/main/default/objects/SiteCustomSettings__c/fields/CustomInvoiceExcelTemplate__c.field-meta.xml
<CustomField>
    <fullName>CustomInvoiceExcelTemplate__c</fullName>
    <label>Custom Invoice Excel Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>