force-app/main/default/objects/SiteCustomSettings__c/fields/CustomInvoiceTemplate__c.field-meta.xml
<CustomField>
    <fullName>CustomInvoiceTemplate__c</fullName>
    <inlineHelpText>Override all invoice templates that included in the package with a custom Visualforce page. This will override any template enabled (still need to enable at lease 1 template). Must use page&apos;s API Name</inlineHelpText>
    <label>Custom Invoice Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>