force-app/main/default/objects/SiteCustomSettings__c/fields/EnableInvoiceTemplateSet12__c.field-meta.xml
<CustomField>
    <fullName>EnableInvoiceTemplateSet12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Invoice Template Set 12</label>
    <type>Checkbox</type>
</CustomField>