force-app/main/default/objects/SiteCustomSettings__c/fields/FCYBankAccountShortName1__c.field-meta.xml
<CustomField>
    <fullName>FCYBankAccountShortName1__c</fullName>
    <label>FCY Bank Account Short Name-1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>