force-app/main/default/objects/SiteCustomSettings__c/fields/FCYCurrency__c.field-meta.xml
<CustomField>
    <fullName>FCYCurrency__c</fullName>
    <label>FCY Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>