force-app/main/default/objects/SiteCustomSettings__c/fields/FileConverterURL__c.field-meta.xml
<CustomField>
    <fullName>FileConverterURL__c</fullName>
    <description>Store URL to online File Converter tool.</description>
    <inlineHelpText>Store URL to online File Converter tool.</inlineHelpText>
    <label>File Converter URL</label>
    <type>Url</type>
</CustomField>