force-app/main/default/objects/SiteCustomSettings__c/fields/Footer__c.field-meta.xml
<CustomField>
    <fullName>Footer__c</fullName>
    <label>Footer</label>
    <type>TextArea</type>
</CustomField>