force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignAccountAddress1__c.field-meta.xml
<CustomField>
    <fullName>ForeignAccountAddress1__c</fullName>
    <label>Foreign Account Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>