force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignAccountAddress2__c.field-meta.xml
<CustomField>
    <fullName>ForeignAccountAddress2__c</fullName>
    <label>Foreign Account Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>