force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignAccountNo1__c.field-meta.xml
<CustomField>
    <fullName>ForeignAccountNo1__c</fullName>
    <label>Foreign Account No 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>