force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignAccountNo2__c.field-meta.xml
<CustomField>
    <fullName>ForeignAccountNo2__c</fullName>
    <label>Foreign Account No 2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>