force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignBank1Other__c.field-meta.xml
<CustomField>
    <fullName>ForeignBank1Other__c</fullName>
    <label>Foreign Bank 1-Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>