force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignBank2Other__c.field-meta.xml
<CustomField>
    <fullName>ForeignBank2Other__c</fullName>
    <label>Foreign Bank 2-Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>