force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignBankAccount1__c.field-meta.xml
<CustomField>
    <fullName>ForeignBankAccount1__c</fullName>
    <label>Foreign Bank Account 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>