force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignBankAccount2__c.field-meta.xml
<CustomField>
    <fullName>ForeignBankAccount2__c</fullName>
    <label>Foreign Bank Account 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>