force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignBankAccount__c.field-meta.xml
<CustomField>
    <fullName>ForeignBankAccount__c</fullName>
    <label>Foreign Bank Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>