force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignBankAddress1__c.field-meta.xml
<CustomField>
    <fullName>ForeignBankAddress1__c</fullName>
    <label>Foreign Bank Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>