force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignBankAddress2__c.field-meta.xml
<CustomField>
    <fullName>ForeignBankAddress2__c</fullName>
    <label>Foreign Bank Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>