force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignBankName1__c.field-meta.xml
<CustomField>
    <fullName>ForeignBankName1__c</fullName>
    <label>Foreign Bank Name 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>