force-app/main/default/objects/SiteCustomSettings__c/fields/ForeignBankName2__c.field-meta.xml
<CustomField>
    <fullName>ForeignBankName2__c</fullName>
    <label>Foreign Bank Name 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>