force-app/main/default/objects/SiteCustomSettings__c/fields/GPSSystem1URL__c.field-meta.xml
<CustomField>
    <fullName>GPSSystem1URL__c</fullName>
    <inlineHelpText>Must not input http://.</inlineHelpText>
    <label>GPS System 1</label>
    <type>Url</type>
</CustomField>