force-app/main/default/objects/SiteCustomSettings__c/fields/HAWB_Blank_Template_URL__c.field-meta.xml
<CustomField>
    <fullName>HAWB_Blank_Template_URL__c</fullName>
    <label>HAWB Blank Template URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>