force-app/main/default/objects/SiteCustomSettings__c/fields/HAWB_Logo__c.field-meta.xml
<CustomField>
    <fullName>HAWB_Logo__c</fullName>
    <label>HAWB Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>