force-app/main/default/objects/SiteCustomSettings__c/fields/HAWBTemplateURL__c.field-meta.xml
<CustomField>
    <fullName>HAWBTemplateURL__c</fullName>
    <label>HAWB Template URL</label>
    <type>Url</type>
</CustomField>