force-app/main/default/objects/SiteCustomSettings__c/fields/HBLFormField__c.field-meta.xml
<CustomField>
    <fullName>HBLFormField__c</fullName>
    <label>HBLFormField</label>
    <type>Url</type>
</CustomField>