force-app/main/default/objects/SiteCustomSettings__c/fields/HBLTemplateURL__c.field-meta.xml
<CustomField>
    <fullName>HBLTemplateURL__c</fullName>
    <label>H B/L Template URL</label>
    <type>Url</type>
</CustomField>