force-app/main/default/objects/SiteCustomSettings__c/fields/HBLTemplateURLSurrendered__c.field-meta.xml
<CustomField>
    <fullName>HBLTemplateURLSurrendered__c</fullName>
    <label>H B/L Template URL (Surrendered)</label>
    <type>Url</type>
</CustomField>