force-app/main/default/objects/SiteCustomSettings__c/fields/InvoiceTemplateSet10Name__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTemplateSet10Name__c</fullName>
    <label>Invoice Template Set 10 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>