force-app/main/default/objects/SiteCustomSettings__c/fields/Local_Account_No_3__c.field-meta.xml
<CustomField>
    <fullName>Local_Account_No_3__c</fullName>
    <label>Local Account No 3</label>
    <length>60</length>
    <type>Text</type>
</CustomField>