force-app/main/default/objects/SiteCustomSettings__c/fields/Local_Bank_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Local_Bank_Account_2__c</fullName>
    <label>Local Bank Account 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>