force-app/main/default/objects/SiteCustomSettings__c/fields/Local_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Local_Bank_Account__c</fullName>
    <label>Local Bank Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>