force-app/main/default/objects/SiteCustomSettings__c/fields/Local_Bank_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Local_Bank_Name_1__c</fullName>
    <label>Local Bank Name 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>