force-app/main/default/objects/SiteCustomSettings__c/fields/Local_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Local_Company_Address__c</fullName>
    <description>Use this to store the address for localizing beside English format as global.</description>
    <inlineHelpText>Use this to store the address for localizing beside English format as global.</inlineHelpText>
    <label>Local Company Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>