force-app/main/default/objects/SiteCustomSettings__c/fields/LocalCompanyAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>LocalCompanyAddressLine1__c</fullName>
    <label>Local Company Address (Line 1)</label>
    <type>TextArea</type>
</CustomField>