force-app/main/default/objects/SiteCustomSettings__c/fields/LocalCompanyAddressZIP__c.field-meta.xml
<CustomField>
    <fullName>LocalCompanyAddressZIP__c</fullName>
    <label>Company Address Local (ZIP/City)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>