force-app/main/default/objects/SiteCustomSettings__c/fields/LocalCurrency__c.field-meta.xml
<CustomField>
    <fullName>LocalCurrency__c</fullName>
    <label>Local Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>