force-app/main/default/objects/SiteCustomSettings__c/fields/LocalCurrencyBankAccountShortName2__c.field-meta.xml
<CustomField>
    <fullName>LocalCurrencyBankAccountShortName2__c</fullName>
    <label>Local Currency Bank Account Short Name-2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>