force-app/main/default/objects/SiteCustomSettings__c/fields/LocalCurrencyBankAccountShortName3__c.field-meta.xml
<CustomField>
    <fullName>LocalCurrencyBankAccountShortName3__c</fullName>
    <label>Local Currency Bank Account Short Name-3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>