force-app/main/default/objects/SiteCustomSettings__c/fields/LunchBreakHours__c.field-meta.xml
<CustomField>
    <fullName>LunchBreakHours__c</fullName>
    <defaultValue>1</defaultValue>
    <description>How many hours for lunch break</description>
    <label>Lunch Break Hours</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>