force-app/main/default/objects/SiteCustomSettings__c/fields/MyDomainName__c.field-meta.xml
<CustomField>
    <fullName>MyDomainName__c</fullName>
    <defaultValue>&quot;XXX-CloFor.my.salesforce.com&quot;</defaultValue>
    <inlineHelpText>Enter the Log-In URL.
-no need https://
-My Domain Name can be confirmed at Quick Search at Setup Menu by searching My Domain</inlineHelpText>
    <label>My Domain Name</label>
    <type>Url</type>
</CustomField>