force-app/main/default/objects/SiteCustomSettings__c/fields/OceanHBLNoPrefix__c.field-meta.xml
<CustomField>
    <fullName>OceanHBLNoPrefix__c</fullName>
    <description>This is the prefix to be appended to the auto-generated HBL Number for Ocean Export shipment</description>
    <inlineHelpText>This is the prefix to be appended to the auto-generated HBL Number for Ocean Export shipment</inlineHelpText>
    <label>Ocean HBL No Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>