force-app/main/default/objects/SiteCustomSettings__c/fields/PayableViewName__c.field-meta.xml
<CustomField>
    <fullName>PayableViewName__c</fullName>
    <label>CloFMS/TMS Payable View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>