force-app/main/default/objects/SiteCustomSettings__c/fields/RegistrationNoForm__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNoForm__c</fullName>
    <label>Registration No(Form)</label>
    <length>11</length>
    <type>Text</type>
</CustomField>