force-app/main/default/objects/SiteCustomSettings__c/fields/RegistrationNoSerial__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNoSerial__c</fullName>
    <label>Registration No(Serial)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>