force-app/main/default/objects/SiteCustomSettings__c/fields/SwitchToNewUnitPriceCalculation__c.field-meta.xml
<CustomField>
    <fullName>SwitchToNewUnitPriceCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To switch to new logic of Unit Price Calculation, please check on this check box.
In case you face any problem, please unchecked so that you can switch back to previous logic.
For more detail on how the new logic works, please contact to AFR Consultant.</inlineHelpText>
    <label>Switch to New Unit Price Calculation</label>
    <type>Checkbox</type>
</CustomField>