force-app/main/default/objects/SiteCustomSettings__c/fields/SwitchToUnitInBilling__c.field-meta.xml
<CustomField>
    <fullName>SwitchToUnitInBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Switch to Unit in Billing</label>
    <type>Checkbox</type>
</CustomField>