force-app/main/default/objects/SiteCustomSettings__c/fields/TCLLogo__c.field-meta.xml
<CustomField>
    <fullName>TCLLogo__c</fullName>
    <label>TCLLogo</label>
    <type>Url</type>
</CustomField>