force-app/main/default/objects/SiteCustomSettings__c/fields/VATBackgroundImage__c.field-meta.xml
<CustomField>
    <fullName>VATBackgroundImage__c</fullName>
    <description>The background image for VAT Invoice</description>
    <inlineHelpText>The background image for VAT Invoice</inlineHelpText>
    <label>VAT Background Image</label>
    <type>Url</type>
</CustomField>