force-app/main/default/objects/SiteCustomSettings__c/fields/VATInvoiceObjectIdPrefix__c.field-meta.xml
<CustomField>
    <fullName>VATInvoiceObjectIdPrefix__c</fullName>
    <description>The prefix of VAT Invoice object ID</description>
    <inlineHelpText>The prefix of VAT Invoice object ID</inlineHelpText>
    <label>VAT Invoice Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>