force-app/main/default/objects/SiteCustomSettings__c/fields/VATRunningNumber__c.field-meta.xml
<CustomField>
    <fullName>VATRunningNumber__c</fullName>
    <label>VAT Running Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>